# ChangeLog for app-mobilephone/heimdall
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/heimdall/ChangeLog,v 1.5 2014/02/09 17:34:06 floppym Exp $

  09 Feb 2014; Mike Gilbert <floppym@gentoo.org> heimdall-1.4.0.ebuild,
  heimdall-9999.ebuild:
  Remove obsolete comment.

  09 Feb 2014; Mike Gilbert <floppym@gentoo.org> heimdall-1.4.0.ebuild,
  heimdall-9999.ebuild:
  Depend on libusb or libusbx, bug 500764 by Jerome Venturi.

  02 Jan 2014; Mike Gilbert <floppym@gentoo.org> heimdall-1.4.0.ebuild,
  heimdall-9999.ebuild:
  Document reason for depending on libusbx, bug 496764.

*heimdall-1.4.0 (18 Aug 2013)
*heimdall-9999 (18 Aug 2013)

  18 Aug 2013; Mike Gilbert <floppym@gentoo.org> +heimdall-1.4.0.ebuild,
  +heimdall-9999.ebuild, +metadata.xml:
  New ebuild, resolves bug 353180.