@@ -2,14 +2,14 @@
 Hash: SHA256
 
 DIST heimdall-1.4.0.tar.gz 6565316 SHA256 13f5edff2fc857cf7d82708a2ac9ad1f6d2f5d6a2e5d84587f55f62583d60531 SHA512 ae6c55af97fe95587b89cce90e75fd3b236fd8ac0d506112c9c143fb1d0982aac6d1bef7a6c6635b547148ac4913aeb4215ed9c7c8084fd0912010c5ad9604ee WHIRLPOOL b4c64a755d2f3577f894e22633e11cf60323d028b89e8117fa2c6cbedf7b55d9227cb17017d966d3d48fb56958a11ce87f3334aafedfcae57e6928ef42d8c121
-EBUILD heimdall-1.4.0.ebuild 1558 SHA256 61526b3b1c3d977b8f47abea16e735fe86faef4ed9e02d23e162509145003891 SHA512 ffb64ee01c1df373e02e6a3c43aae746856b97bb175365457b978e22c5676b630643a4707dfb9ab67aa533283b2a134268b8aa572d99237db2f79412cd5c0362 WHIRLPOOL 0db6d114dc60090aa4ec2538b578eb60b5a4c4acef7b98d2bcbf6b22899aa356708d568e6266d5d752a9fc84a57cf710af13a5c021fd8c49c1d2c5fc19b84843
-EBUILD heimdall-9999.ebuild 1557 SHA256 36ea408e9770b304c35480e0ac1f6577c0e4c5d5739bc6382047a29d1c246d8c SHA512 4eba6f138960ccb514280773053fc4fa7bac98d0e6823edc4a4c7616092bbed780500d9b9b3377b1fa4aefe5975d5a0351583ec8bc973effe458421496cd728c WHIRLPOOL 746aaff942b1ca325290f67a74e8590ad7f5024978b7f3bc880ef0ac5659edb04d9a8810f780f6c2613612fdfe5e1e9b5c0437ef0296cb27f54209a2ad2594ac
-MISC ChangeLog 865 SHA256 25ceb08f6e304be46b4ef57f333c7e46b48065444ec88173de15e197a0e0290c SHA512 94fd5db79ee5cbab291692307e82f04675fb46c3b8823d24132dba41b5ae41c2f019e5491396a670d0189964df06de13ac28cacd88e3b2ba824f3201507103a4 WHIRLPOOL e6af30556a79eb65b8c239d2754b7995b321ab417164d51bb43456b05be4d28d498c0982c8f407ad5d5905c671927a6b032a6dca2080fbc1ee3047609fac3bde
+EBUILD heimdall-1.4.0.ebuild 1597 SHA256 6e6296854bc0c38334a44e28b6af954c6f475bc2ef4e5e2c992e6c0126b6017d SHA512 0245ef6594a4fd5600fb09172444e88c5571b494f9027c1ee4865f21b641544d9f3ad00949a48834952994a4e3875fff9ad2b5464a36e6193f359b67cb24d7ed WHIRLPOOL ed474d74270ba259f7332e3ea51ac5f26989863acb7a7aba47c74d38138e7839495b7128a665a99315f32e17bc4963ffa613b85811dd8eb4fa443ffc733ee6a6
+EBUILD heimdall-9999.ebuild 1596 SHA256 ee7c9402c57f512c69966841d8ce1a1c15ea8659a966ca36c501dc601c11b61c SHA512 692556c4b48d66430c9d0b0a8ff8e0f4e9459f2cb76bfe5019e0efafbeaa9ac084f6f1fca482a6f49a98a48ed5921587867afaabd81effb3f304e293ff755ce0 WHIRLPOOL bba122885a5decf17acb536de42992a4caa4e84cc767918c323cffd01311784d35aaae47fe0954094fb83a54e220c4b8cc7e71bfda2b893cd83fc5ad5d1e80f9
+MISC ChangeLog 1001 SHA256 a9e009d090c4d8bead4252dd066494ee131ee9ab178f9957beb74fc69e36749b SHA512 b2d5f190f54a18c7ec81db49884b6a2c3b4d9e84caf99a6bd362e36cba92ffe7a0784a6f978903b5de50c55d61854bee9039bfe919f4b8b20497ad4f7840e151 WHIRLPOOL 2bad5c4662b717a7d28232e3615f6f7622a92f9cba95f5146ccbeabdf44bc3d6be174d0c568010e0950826ea79f92ca6aafa50aceededbac5410f32afacec4c2
 MISC metadata.xml 232 SHA256 8e0308eed9efea18755c3fc2161057faa2b438c4d31895e776d2d5cd5ff109df SHA512 0ec524315be6762228ff54bca53ec039e93672dcef379ef6ef0087656d5e11644aebabcc08663af4f18bdb1b254e71f2b2d3f91277e2867022b93f00d975ae88 WHIRLPOOL bd96dd794e9fdf37bea367be6ada6deb0cf7b98f1978c9e23746f98b1fc2fef931077dd59f6bff7d64856ed284d39f638fb8e0517c61b42f6a0605db09297047
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlL3vA8ACgkQC77qH+pIQ6QhfQD/cmRExSgbHBwXIey7UCo/CcNn
-Tw6FE2Xs/jq1fUU/qHcBAJ7Wt3UWnc3c8A3UdOnnVP/NNiF/lJ+dc9qVcuMwmoTD
-=GbWg
+iF4EAREIAAYFAlL4Q2UACgkQC77qH+pIQ6ROoAD/SxQO2xCtqOoUB8yQKuhjTmZc
+cGS+W2HcKaxL+rmtxmIA/jXSpeE+Q+8fySAYsV57pyP5d6oAYENxtl4QnHiAVIAM
+=FWd6
 -----END PGP SIGNATURE-----
